fix: fixed nextui body collapse issue

--- a/styles/global-reset.css
+++ b/styles/global-reset.css
@@ -11,7 +11,6 @@
   margin: 0;
 }
 html,
-body,
 #root,
 #__next {
   height: 100%;
